2008-04-02: 1.11.19
Import xcms from BioC 2.1

2008-04-02: 1.10.8
Fix duplicate setGeneric() which fails on R-2.7a
Fix BinLinBase which had an uninitialised argument in .Call()
Provide clean base for pulling 1.10.8 into 1.11.19

2008-01-24: 1.10.7
Fix in plot(eic) for xcmsEIC with absent groups

2007-11-13: 1.10.6
Removed unnecessary use of data.frame in findPeaks.centWave(), this fixes
a long delay when large peaklists are generated

2007-11-12: 1.10.5
Increased buffer size in findMZBoxes() to catch a rare bug

2007-11-07: 1.10.4
Standardised peak area calculation by introducing scan-distance multiplier to findPeaks.centWave()

2007-11-07: 1.10.3
Fixed a serious fillPeaks() bug introduced in version 1.9.5, which caused it to
silently fill in zero intensities for almost every missing peak

2007-11-01: 1.10.2
Fixed bug in findPeaks.centWave() buffer initialisation (mzboxes.c)
Added check in findPeaks.matchedFilter() for not picking filter artefacts 

2007-10-09: 1.10.1
Added error when xcmsRaw objects are read that have non-monotonic stantimes
Added warning when retcor() is probably overcorrecting
Fixed a bounds checking bug in specPeaks()

2007-10-08: 1.10.0
Bioconductor release 2.1

2007-09-17: 1.9.6
rawEIC uses binary search
findMZBoxes gives proper error messages
findPeaks.centWave
  - new baseline and S/N estimation (default snthresh=20)
Bugfix for MSW.getRidge

2007-09-04: 1.9.5
Fixed bug were fillPeaks() would fail if there was <= 1 peak to fill in
Made getPeaks() slightly more memory efficient by correcting an oversight
flush.console() is now called on all systems during long operations

2007-07-16: 1.9.4
Increased buffer size to 100000 in findMZBoxes() to handle also files with a vast number of peaks
Fixed bug in MSW.getRidge() to catch empty ridgeLists
findPeaks.centWave
  - The scale on which the peak was localised is also returned
  - additional logical argument fitgauss, gaussian fits are no longer mandatory 