@@ -1,3 +1,9 @@
+2008-??-??
+Added prefilter option to findmzROI
+Speedup for findmzROI
+Renamed findMZBoxes to findmzROI
+Removed findMZBoxes from NAMESPACE
+
 2008-04-02: 1.11.19
 Import xcms from BioC 2.1
 
